--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -4,3 +4,11 @@ server:
 spring:
   application:
     name: product
+
+eureka:
+  instance:
+    prefer-ip-address: true
+
+feign:
+  hystrix:
+    enabled: true
